option('db_host', type : 'string', value : '127.0.0.1', description: 'MariaDB server address')
option('db_port', type : 'integer', value : 0, description: 'MariaDB server port')
option('db_base', type : 'string', value : 'test', description: 'MariaDB server base name')
option('db_user', type : 'string', value : 'test', description: 'MariaDB server user name')
option('db_pass', type : 'string', value : 'test', description: 'MariaDB server user password')
option('scripts_path', type : 'string', value : '/usr/bin/', description: 'Scripts path')
option('tg_key', type : 'string', value : '', description: 'Telegram Bot API key')
option('tg_chat', type : 'string', value : '', description: 'Telegram Chat Id for reporting')
option('user', type : 'string', value : 'user', description: 'Current user')
